@@ -82,8 +82,6 @@ RRD_LIB_OBJ_LIST = \
         $(TOP)/src/rrd_utils.obj \
         $(TOP)/src/rrd_version.obj \
         $(TOP)/src/rrd_xport.obj \
-        $(TOP)/win32/asprintf.obj \
-        $(TOP)/win32/vasprintf-msvc.obj \
         $(TOP)/win32/win32-glob.obj
 # win32comp.obj is not added to RRD_LIB_OBJ_LIST, because definitions are already in rrd_thread_safe_nt.obj
 
